--- a/cars.ipynb
+++ b/cars.ipynb
@@ -985,10 +985,10 @@
     "df_std = scaler.fit_transform(df[num_columns])\n",
     "\n",
     "#розділимо наші дані на тренувальні і тестові, на яких будемо перевіряти нашу модель\n",
-    "X_train, X_test, y_train, y_test = train_test_split(df_std, y, test_size=0.3, random_state=random_state_const)\n",
+    "X_train_one, X_test_one, y_train_one, y_test_one = train_test_split(df_std, y, test_size=0.3, random_state=random_state_const)\n",
     "\n",
     "\n",
-    "print(-np.mean(cross_val_score(ligreg, X_train, y_train, cv=5, scoring='neg_mean_absolute_error')))"
+    "print(-np.mean(cross_val_score(ligreg, X_train_one, y_train_one, cv=5, scoring='neg_mean_absolute_error')))"
    ]
   },
   {
@@ -1014,7 +1014,7 @@
    "source": [
     "#потренуємо нашу модель на тренувальних даних, що ми раніше визначили як тренувальні\n",
     "ligreg = LinearRegression()\n",
-    "ligreg.fit(X_train, y_train)\n",
+    "ligreg.fit(X_train_one, y_train_one)\n",
     "list(zip(ligreg.coef_, num_columns))"
    ]
   },
@@ -1025,7 +1025,7 @@
    "outputs": [],
    "source": [
     "#передбачемо наші дані на тестовій вибірці\n",
-    "y_pred = ligreg.predict(X_test)"
+    "y_pred_one = ligreg.predict(X_test_one)"
    ]
   },
   {
@@ -1034,19 +1034,526 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "metric_one = 2.054069377227348\n"
+     ]
+    }
+   ],
+   "source": [
+    "#перевіримо точність нашої моделі\n",
+    "metric_one = metrics.mean_absolute_error(y_pred_one, y_test_one)\n",
+    "print('metric_one =', metric_one)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "таке собі значення \"точності\" для моделі. \n",
+    "додамо тепер ще категоріальні дані до вже існуючих вище числових даних. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Make</th>\n",
+       "      <th>Type</th>\n",
+       "      <th>Origin</th>\n",
+       "      <th>DriveTrain</th>\n",
+       "      <th>Invoice</th>\n",
+       "      <th>EngineSize</th>\n",
+       "      <th>Horsepower</th>\n",
+       "      <th>Weight</th>\n",
+       "      <th>Wheelbase</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Acura</td>\n",
+       "      <td>SUV</td>\n",
+       "      <td>Asia</td>\n",
+       "      <td>All</td>\n",
+       "      <td>33337</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>265</td>\n",
+       "      <td>4451</td>\n",
+       "      <td>106</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Acura</td>\n",
+       "      <td>Sedan</td>\n",
+       "      <td>Asia</td>\n",
+       "      <td>Front</td>\n",
+       "      <td>21761</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>200</td>\n",
+       "      <td>2778</td>\n",
+       "      <td>101</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Acura</td>\n",
+       "      <td>Sedan</td>\n",
+       "      <td>Asia</td>\n",
+       "      <td>Front</td>\n",
+       "      <td>24647</td>\n",
+       "      <td>2.4</td>\n",
+       "      <td>200</td>\n",
+       "      <td>3230</td>\n",
+       "      <td>105</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Acura</td>\n",
+       "      <td>Sedan</td>\n",
+       "      <td>Asia</td>\n",
+       "      <td>Front</td>\n",
+       "      <td>30299</td>\n",
+       "      <td>3.2</td>\n",
+       "      <td>270</td>\n",
+       "      <td>3575</td>\n",
+       "      <td>108</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Acura</td>\n",
+       "      <td>Sedan</td>\n",
+       "      <td>Asia</td>\n",
+       "      <td>Front</td>\n",
+       "      <td>39014</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>225</td>\n",
+       "      <td>3880</td>\n",
+       "      <td>115</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "2.054069377227348"
+       "    Make   Type Origin DriveTrain  Invoice  EngineSize  Horsepower  Weight  \\\n",
+       "0  Acura    SUV   Asia        All    33337         3.5         265    4451   \n",
+       "1  Acura  Sedan   Asia      Front    21761         2.0         200    2778   \n",
+       "2  Acura  Sedan   Asia      Front    24647         2.4         200    3230   \n",
+       "3  Acura  Sedan   Asia      Front    30299         3.2         270    3575   \n",
+       "4  Acura  Sedan   Asia      Front    39014         3.5         225    3880   \n",
+       "\n",
+       "   Wheelbase  \n",
+       "0        106  \n",
+       "1        101  \n",
+       "2        105  \n",
+       "3        108  \n",
+       "4        115  "
       ]
      },
-     "execution_count": 25,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['Make', 'Type', 'Origin', 'DriveTrain'], dtype='object')"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.select_dtypes(include='object').columns"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Видалимо поле 'Make' "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df.drop('Make', axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Type', 'Origin', 'DriveTrain']"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(df.select_dtypes(include='object').columns)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# кодуємо категоріальні змінні(ohe) за допомогою бібліотеки pandas.\n",
+    "df_new = df[df.select_dtypes(include='object').columns]\n",
+    "for i in ['Type', 'Origin', 'DriveTrain']:\n",
+    "    df_new = pd.get_dummies(df_new, columns=[i], prefix = [i])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#створюємо одну єдину базу, що буде складатися із закодованих категоріальних змінних і стандартизованих числових полів.\n",
+    "df_final = pd.concat([pd.DataFrame(df_std, columns=num_columns), df_new], axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Invoice</th>\n",
+       "      <th>EngineSize</th>\n",
+       "      <th>Horsepower</th>\n",
+       "      <th>Weight</th>\n",
+       "      <th>Wheelbase</th>\n",
+       "      <th>Type_Hybrid</th>\n",
+       "      <th>Type_SUV</th>\n",
+       "      <th>Type_Sedan</th>\n",
+       "      <th>Type_Sports</th>\n",
+       "      <th>Type_Truck</th>\n",
+       "      <th>Type_Wagon</th>\n",
+       "      <th>Origin_Asia</th>\n",
+       "      <th>Origin_Europe</th>\n",
+       "      <th>Origin_USA</th>\n",
+       "      <th>DriveTrain_All</th>\n",
+       "      <th>DriveTrain_Front</th>\n",
+       "      <th>DriveTrain_Rear</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.188537</td>\n",
+       "      <td>0.273884</td>\n",
+       "      <td>0.684503</td>\n",
+       "      <td>1.151631</td>\n",
+       "      <td>-0.259477</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>-0.468388</td>\n",
+       "      <td>-1.080764</td>\n",
+       "      <td>-0.221395</td>\n",
+       "      <td>-1.055214</td>\n",
+       "      <td>-0.861735</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>-0.304611</td>\n",
+       "      <td>-0.719525</td>\n",
+       "      <td>-0.221395</td>\n",
+       "      <td>-0.458983</td>\n",
+       "      <td>-0.379929</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.016134</td>\n",
+       "      <td>0.002954</td>\n",
+       "      <td>0.754187</td>\n",
+       "      <td>-0.003896</td>\n",
+       "      <td>-0.018574</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.510700</td>\n",
+       "      <td>0.273884</td>\n",
+       "      <td>0.127028</td>\n",
+       "      <td>0.398428</td>\n",
+       "      <td>0.824586</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    Invoice  EngineSize  Horsepower    Weight  Wheelbase  Type_Hybrid  \\\n",
+       "0  0.188537    0.273884    0.684503  1.151631  -0.259477            0   \n",
+       "1 -0.468388   -1.080764   -0.221395 -1.055214  -0.861735            0   \n",
+       "2 -0.304611   -0.719525   -0.221395 -0.458983  -0.379929            0   \n",
+       "3  0.016134    0.002954    0.754187 -0.003896  -0.018574            0   \n",
+       "4  0.510700    0.273884    0.127028  0.398428   0.824586            0   \n",
+       "\n",
+       "   Type_SUV  Type_Sedan  Type_Sports  Type_Truck  Type_Wagon  Origin_Asia  \\\n",
+       "0         1           0            0           0           0            1   \n",
+       "1         0           1            0           0           0            1   \n",
+       "2         0           1            0           0           0            1   \n",
+       "3         0           1            0           0           0            1   \n",
+       "4         0           1            0           0           0            1   \n",
+       "\n",
+       "   Origin_Europe  Origin_USA  DriveTrain_All  DriveTrain_Front  \\\n",
+       "0              0           0               1                 0   \n",
+       "1              0           0               0                 1   \n",
+       "2              0           0               0                 1   \n",
+       "3              0           0               0                 1   \n",
+       "4              0           0               0                 1   \n",
+       "\n",
+       "   DriveTrain_Rear  \n",
+       "0                0  \n",
+       "1                0  \n",
+       "2                0  \n",
+       "3                0  \n",
+       "4                0  "
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_final.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.540641984986987"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_train_two, X_test_two, y_train_two, y_test_two = train_test_split(df_final, y, test_size=0.3, random_state=random_state_const)\n",
+    "\n",
+    "-np.mean(cross_val_score(ligreg, X_train_two, y_train_two, cv=5, scoring='neg_mean_absolute_error'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0.58214555, -0.45144966, -1.4927261 , -2.30871521,  0.21696337,\n",
+       "       16.89281162, -3.53042164, -2.84393381, -4.15120209, -3.62841229,\n",
+       "       -2.73884178,  0.41507786, -0.33051415, -0.0845637 , -0.19184539,\n",
+       "        0.47560812, -0.28376273])"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# навчаємо нашу модель на тренувальних даних.\n",
+    "ligreg.fit(X_train_two, y_train_two)\n",
+    "ligreg.coef_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#передбачемо наші дані на тестовій вибірці\n",
+    "y_pred_two = ligreg.predict(X_test_two)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "metric_two = 1.6387099335785194\n"
+     ]
+    }
+   ],
+   "source": [
     "#перевіримо точність нашої моделі\n",
-    "metrics.mean_absolute_error(y_pred, y_test)"
+    "metric_two = metrics.mean_absolute_error(y_pred_two, y_test_two)\n",
+    "print('metric_two =', metric_two)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Висновок"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Іncrease = 20%\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Іncrease = {}{}'.format(int(round((1 - metric_two/metric_one), 2) * 100), '%'))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "в порівнянні із результатом, що базувався лише на числових полях, точність нової моделі(числові + категоріальні поля) зросла на **20%**"
    ]
   }
  ],
