New comment added about to explain my steps.

--- a/cars.ipynb
+++ b/cars.ipynb
@@ -1206,7 +1206,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Видалимо поле 'Make' "
+    "Видалимо поле 'Make' (оскільки при подальших діях включно із цим полем отримуємо аномальні результати поведінки моделі, природу цієї поведінки поки не вдалося з'ясувати.) "
    ]
   },
   {
